[package]
name = "ngl-spam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
fake = { version = "2.6.1", features = ["serde_json", "derive"] }
http = "0.2.9"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls", "tokio-rustls", "brotli"] }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
